--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@i/webpack-theme-plugin",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "Webpack plugin to run the Intouch Design System theme processor @i/theme",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -18,12 +18,12 @@
       "@i/utility": "latest"
     },
     "devDependencies": {
-      "@types/webpack": "4.41.21",
+      "@types/webpack": "4.41.22",
       "rimraf": "3.0.2",
-      "typescript": "3.9.7"
+      "typescript": "4.0.3"
     },
     "peerDependencies": {
-      "webpack": "^4.44.1"
+      "webpack": ">=4.44.2"
     }
   }
   
