Update dependencies and validation, bump to v0.0.10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@i/webpack-theme-plugin",
-    "version": "0.0.9",
+    "version": "0.0.10",
     "description": "Webpack plugin to run the Intouch Design System theme processor @i/theme",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -14,8 +14,7 @@
       "test": "echo tests are missing"
     },
     "dependencies": {
-      "@i/theme": "latest",
-      "@i/utility": "latest"
+      "@i/theme": "latest"
     },
     "devDependencies": {
       "@types/webpack": "4.41.22",
