--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@i/webpack-theme-plugin",
-    "version": "0.0.24",
+    "version": "0.0.25",
     "description": "Webpack plugin to run the Intouch Design System theme processor @i/theme",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -14,7 +14,8 @@
       "test": "echo tests are missing"
     },
     "dependencies": {
-      "@i/theme": "latest"
+      "@i/theme": "latest",
+      "@i/utility": "latest"
     },
     "devDependencies": {
       "@types/webpack": "4.41.26",
