--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@i/webpack-theme-plugin",
-    "version": "0.0.36",
-    "description": "Webpack plugin to run the Intouch Design System theme processor @i/theme",
+    "name": "@intouchg/webpack-theme-plugin",
+    "version": "0.1.0",
+    "description": "Webpack plugin to run the Intouch Design System theme processor @intouchg/theme",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "repository": "https://intazdoweb.intouchsol.com/IntouchDesignSystem/IntouchDesignSystem/_git/webpack-theme-plugin",
@@ -14,7 +14,7 @@
       "test": "echo tests are missing"
     },
     "dependencies": {
-      "@i/theme": "latest",
+      "@intouchg/theme": "latest",
       "chokidar": "3.5.1"
     },
     "devDependencies": {
